mksc/testcases/compile/fail/class_7.mks
# compile fail
# invalid class method name.
class A
	def class.initialize()
	end
end
